--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -332,7 +332,7 @@ b {
     color: #22c48e;
   }
 .navbar-default .navbar-brand:hover {
-    font-size: 24px;
+    font-size: 12px;
 }
   .navbar-default .navbar-nav li.appointment-btn {
     margin: 3px 0 0 20px;
@@ -384,7 +384,7 @@ b {
 
   .navbar-default .navbar-nav > li a:hover {
     color: #22c48e !important;
-    font-size: 17px;
+    font-size: 12px;
   } 
 
   .navbar-default .navbar-nav > li > a:hover,
@@ -413,6 +413,9 @@ b {
   .navbar-default .navbar-toggle:hover,
   .navbar-default .navbar-toggle:focus { 
     background-color: transparent;
+  }
+  #dorpDown li {
+    text-decoration: none;
   }
 
   /*---------------------------------------
@@ -527,7 +530,7 @@ input#search-bar:focus:-ms-placeholder {
     border: 2px solid #d9d9d9;
     background: transparent;
     display: block;
-    -webkit-backface-visibility: visible;
+    /* -webkit-backface-visibility: visible; */ 
     transition: opacity 200ms ease;
     border-radius: 30px;
   }
@@ -682,12 +685,14 @@ input#search-bar:focus:-ms-placeholder {
     margin: auto; 
   }
   .btn-primary1:hover {
-    background: #0e3c9e;
+    background: #3a61b6;
     color: white;
     text-shadow: 1px 1px #999;
     width: 70%; 
     margin: auto; 
   }
+  
+
   .btn-primary2 {
     background: #ce2f2f;
     color: white;
@@ -701,7 +706,6 @@ input#search-bar:focus:-ms-placeholder {
     width: 70%; 
     margin: auto; 
   }
-
 
   /*---------------------------------------
      SERVICE              
@@ -873,7 +877,7 @@ input#search-bar:focus:-ms-placeholder {
     font-size: 12px;
     font-weight: 500;
     text-decoration: none;
-    float: left;
+    /* float: left; */ 
     min-width: 30px;
     padding: 6px 12px;
     -webkit-transition: all ease-in-out 0.4s;
@@ -1079,7 +1083,19 @@ input#search-bar:focus:-ms-placeholder {
     background: #4267b2;
     color: #ffffff;
   }
-
+  .table {
+    width: 80%; 
+    margin: auto;
+  } 
+  .table thead {
+    background-color: #22c48e;
+  }
+  .tab_def p{
+    text-align: center; 
+    font-size: 25px;
+    padding: 20px;
+    text-shadow: 1.5px 1.5px rgb(168, 168, 168);
+  }
 
   /*---------------------------------------
      RESPONSIVE STYLES              
@@ -1174,6 +1190,7 @@ input#search-bar:focus:-ms-placeholder {
       bottom: 10em;
     }
   }
+  
 
   @media only screen and (max-width: 639px) {
     h1 {
@@ -1194,114 +1211,4 @@ input#search-bar:focus:-ms-placeholder {
 
   }
 
-/* ----------- Button --------------  
-
-/* Global Button Styles 
-
-a.animated-button:link, a.animated-button:visited {
-	position: relative;
-	display: block;
-	margin: 30px auto 0;
-	padding: 14px 15px;
-	color: #fff;
-	font-size:14px;
-	font-weight: bold;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	overflow: hidden;
-	letter-spacing: .08em;
-	border-radius: 0;
-	text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
-}
-a.animated-button:link:after, a.animated-button:visited:after {
-	content: "";
-	position: absolute;
-	height: 0%;
-	left: 50%;
-	top: 50%;
-	width: 150%;
-	z-index: -1;
-	-webkit-transition: all 0.75s ease 0s;
-	-moz-transition: all 0.75s ease 0s;
-	-o-transition: all 0.75s ease 0s;
-	transition: all 0.75s ease 0s;
-}
-a.animated-button:link:hover, a.animated-button:visited:hover {
-	color: #FFF;
-	text-shadow: none;
-}
-a.animated-button:link:hover:after, a.animated-button:visited:hover:after {
-	height: 450%;
-}
-a.animated-button:link, a.animated-button:visited {
-	position: relative;
-	display: block;
-	margin: 30px auto 0;
-	padding: 14px 15px;
-	color: #fff;
-	font-size:14px;
-	border-radius: 0;
-	font-weight: bold;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	overflow: hidden;
-	letter-spacing: .08em;
-	text-shadow: 0 0 1px rgba(0, 0, 0, 0.2), 0 1px 0 rgba(0, 0, 0, 0.2);
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	-o-transition: all 1s ease;
-	transition: all 1s ease;
-}
-/* ----------------------------------------------------------- 
-a.animated-button.thar-four {
-	color: #fff;
-	cursor: pointer;
-	display: block;
-	position: relative;
-	border: 2px solid #F7CA18;
-	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-0s;
-}
-a.animated-button.thar-four:hover {
-	color: #000 !important;
-	background-color: transparent;
-	text-shadow: nfour;
-}
-a.animated-button.thar-four:hover:before {
-	right: 0%;
-	left: auto;
-	width: 100%;
-}
-a.animated-button.thar-four:before {
-	display: block;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	height: 100%;
-	width: 0px;
-	z-index: -1;
-	content: '';
-	color: #000 !important;
-	background: #F7CA18;
-	transition: all 0.4s cubic-bezier(0.42, 0, 0.58, 1);
-0s;
-} */ 
-.table {
-  width: 80%; 
-  margin: auto;
-} 
-.table thead {
-  background-color: #22c48e;
-}
-.tab_def p{
-  text-align: center; 
-  font-size: 25px;
-  padding: 20px;
-  text-shadow: 1.5px 1.5px rgb(168, 168, 168);
-}
+/* ----------- Button --------------  */ 
